# silver-truth

./: .gitignore  .pre-commit-config.yaml  404.html  BF-C2DL-MuSC_dataset_dataframe.parquet  DIC-C2DH-HeLa_dataset_dataframe.parquet  Fluo-C2DL-MSC_dataset_dataframe.parquet  Fluo-C3DH-A549-SIM_dataset_dataframe.parquet  Fluo-C3DH-A549_dataset_dataframe.parquet  Fluo-C3DH-H157_dataset_dataframe.parquet  Fluo-C3DL-MDA231_dataset_dataframe.parquet  Fluo-N2DH-GOWT1_dataset_dataframe.parquet  Fluo-N2DH-SIM+_dataset_dataframe.parquet  Fluo-N2DL-HeLa_dataset_dataframe.parquet  Fluo-N3DH-CE_dataset_dataframe.parquet  Fluo-N3DH-CHO_dataset_dataframe.parquet  Fluo-N3DH-SIM+_dataset_dataframe.parquet  PhC-C2DH-U373_dataset_dataframe.parquet  PhC-C2DL-PSC_dataset_dataframe.parquet  README.md  SilverTruth-2020-11-14.xlsx  analyze_detailed_results.py  analyze_evaluation_results.py  analyze_segmentation.py  cleanup.py  cli_ensemble.py  cli_evaluation.py  cli_fusion.py  cli_preprocessing.py  cli_qa.py  cnn.py  competitor_config_campaign01.json  competitor_config_campaign02.json  convert_qa_to_parquet.py  count_cells.py  create_all_dataframes.py  data.dvc  demo_detailed_evaluation.py  detailed_evaluation.py  diagnose_tif.py  dvc.yaml  (+35 more)
.dvc/: config
Evaluations/: index.html
References/: index.html
Roadmap/: index.html
Silver-truth-generation/: index.html
configs/: competitor_config_campaign01.json
dataframes/: BF-C2DL-HSC_QA_crops_64_split70-15-15_seed42.parquet
docs/: Evaluations.md  References.md  Roadmap.md  Silver-truth-generation.md  dvc_guide.md  ensemble.md  experiment_tracking.md  fusion.md  index.md  label_synchronizer.md  notebooks.MD  qa_data_preparation.md  quality_assurance.md
ensemble/: index.html
experiment_tracking/: index.html
fused_results/: BF-C2DL-HSC_01_fused_0058.tif  BF-C2DL-HSC_01_fused_0108.tif  BF-C2DL-HSC_01_fused_0126.tif  BF-C2DL-HSC_01_fused_0175.tif  BF-C2DL-HSC_01_fused_0183.tif  BF-C2DL-HSC_01_fused_0218.tif  BF-C2DL-HSC_01_fused_0332.tif  BF-C2DL-HSC_01_fused_0347.tif  BF-C2DL-HSC_01_fused_0359.tif  BF-C2DL-HSC_01_fused_0402.tif  BF-C2DL-HSC_01_fused_0473.tif  BF-C2DL-HSC_01_fused_0475.tif  BF-C2DL-HSC_01_fused_0528.tif  BF-C2DL-HSC_01_fused_0659.tif  BF-C2DL-HSC_01_fused_0701.tif  BF-C2DL-HSC_01_fused_0713.tif  (+33 more)
(+222 files in other folders)
