[project]
name = "silver-truth"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "scipy",
    "numpy",
    "tifffile",
    "click",
    "imagecodecs",
    "tqdm",
    "pyarrow",
    "scikit-learn",
    "tabulate",
]

[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocs-material",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
