[project]
name = "silver-truth"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "scipy",
    "numpy",
    "tifffile",
    "click",
    "imagecodecs",
    "tqdm",
    "pyarrow",
    "scikit-learn",
    "tabulate",
    "types-tabulate",
    "pandas"
]

[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocs-material",
    "pre-commit",
    "mypy",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["var-annotated", "attr-defined"]
ignore_missing_imports = true
