[project]
name = "silver-truth"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "scipy",
    "numpy",
    "tifffile",
    "click",
    "imagecodecs",
    "tqdm",
    "pyarrow",
    "scikit-learn",
    "tabulate",
    "types-tabulate",
    "pandas",
    "Pillow",
    "dvc[ssh]",
    "Pillow",
    "pytorch_lightning",
    "mlflow",
    "albumentations",
    "segmentation-models-pytorch"
]

[project.scripts]
silver-ensemble = "silver_truth.cli.ensemble:cli"
silver-evaluation = "silver_truth.cli.evaluation:cli"
silver-fusion = "silver_truth.cli.fusion:cli"
silver-preprocessing = "silver_truth.cli.preprocessing:cli"
silver-qa = "silver_truth.cli.qa:cli"

[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocs-material",
    "pre-commit",
    "mypy",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
disable_error_code = ["var-annotated", "attr-defined"]
ignore_missing_imports = true
